[Feat] #2 - new/editPostPage view

--- a/src/components/postUploadHeader.scss
+++ b/src/components/postUploadHeader.scss
@@ -1,14 +1,17 @@
 .postUHeader{
-  background-color: black;
-  padding: 30%;
+    background-color: black;
+    padding: 1rem;
 
-  .backBtn{
-    border: none;
-    background-color: none;
-    color: white;
-  }
+    .backBtn{
+        border: none;
+        background: none;
+        color: #B7B7B7;
+    }
 
-  h1{
-    color: white;
-  }
+    h1{
+        margin: 1.5rem 0.67rem 0rem 0.67rem;
+        font-weight: 500;
+        font-size: 1.8rem;
+        color: white;
+    }
 }
