--- a/src/styles/newPost.scss
+++ b/src/styles/newPost.scss
@@ -1,3 +1,24 @@
+@import './textStyles.scss';
+
 body{
-  margin: 0px;
+    font-family: Pretendard;
+    margin: 0px;
+}
+button{
+    cursor: pointer;
+}
+
+.newPost .submit_btn_container{
+    padding: 1rem;
+    text-align: center;
+
+    .submit_btn{
+        width: 5rem;
+        height: 1.5rem;
+
+        border: none;
+        border-radius: 3px;
+        background-color: black;
+        color: white;
+    }
 }
