--- a/src/styles/signIn.scss
+++ b/src/styles/signIn.scss
@@ -75,13 +75,11 @@
                         border-radius: 12px;
                         border: 1px solid #b2aeb1;
 
-                        .id {
+                        input {
                             display: flex;
-                            width: 121px;
-                            height: 19px;
                             flex-direction: column;
                             justify-content: center;
-                            color: #fff;
+                            color: black;
                             text-align: center;
                             font-family: Pretendard;
                             font-size: 17px;
@@ -102,13 +100,11 @@
                         border-radius: 12px;
                         border: 1px solid #b2aeb1;
 
-                        .password {
+                        input {
                             display: flex;
-                            width: 121px;
-                            height: 19px;
                             flex-direction: column;
                             justify-content: center;
-                            color: #fff;
+                            color: black;
                             text-align: center;
                             font-family: Pretendard;
                             font-size: 17px;
