[Feat] #13 - post get/post/patch api

--- a/src/styles/newPost.scss
+++ b/src/styles/newPost.scss
@@ -8,7 +8,7 @@ button{
     cursor: pointer;
 }
 
-.newPost .submit_btn_container{
+.submit_btn_container{
     padding: 1rem;
     text-align: center;
 
