--- a/src/styles/newPost.scss
+++ b/src/styles/newPost.scss
@@ -2,7 +2,9 @@
 
 body{
     font-family: Pretendard;
+    color: black;
     margin: 0px;
+    background-color: white;
 }
 button{
     cursor: pointer;
