[Feat] #15 - 회원가입 기능 구현

--- a/src/styles/signIn.scss
+++ b/src/styles/signIn.scss
@@ -76,10 +76,12 @@
                         border: 1px solid #b2aeb1;
 
                         input {
+                            background: none;
+                            border: none;
                             display: flex;
                             flex-direction: column;
                             justify-content: center;
-                            color: black;
+                            color: white;
                             text-align: center;
                             font-family: Pretendard;
                             font-size: 17px;
@@ -101,10 +103,12 @@
                         border: 1px solid #b2aeb1;
 
                         input {
+                            background: none;
+                            border: none;
                             display: flex;
                             flex-direction: column;
                             justify-content: center;
-                            color: black;
+                            color: white;
                             text-align: center;
                             font-family: Pretendard;
                             font-size: 17px;
