--- a/src/styles/myPage.scss
+++ b/src/styles/myPage.scss
@@ -1,17 +1,16 @@
 .mypage-frame {
-    width: 100vw;
     height: auto;
     background: #fff;
 
     .mypage-box {
-        display: inline-flex;
+        display: flex;
         flex-direction: column;
         align-items: center;
         gap: 32px;
 
         .myprofile {
             display: flex;
-            width: 393px;
+            width: calc(100% - 40px);
             padding: 24px 20px;
             flex-direction: column;
             justify-content: center;
