--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -9,27 +9,42 @@
   .header-text{
     h2{
       margin-left: 20px;
-      padding-top: 30px;
+      padding-top: 40px;
       font-family: 'Pretendard', serif;
       font-weight: 500;
-      font-size: 32px;
+      font-size: 35px;
       color: white;
     }
-    height: 109px;
+    height: 130px;
     background-color: black;
   }
   .search-box{
     background-color: black;
-    height: 30px;
-    .search-bar-section{
-      .search{
-        width: 100px;
-        input{
-          //border-radius: 20px;
-          border: 1px solid #bbb;
-          background-color: transparent;
-        }
+    .search{
+      padding-bottom: 20px;
+      margin-left: 20px;
+      display: flex;
+      input{
+        width: 300px;
+        height: 30px;
+        //border-radius: 20px;
+        border: 1px solid #ffffff;
+        background-color: transparent;
+        transition: all 250ms ease-in-out;
+        backface-visibility: hidden;
+        transform-style: preserve-3d;
+        font-size: 18px;
+        color: white;
       }
+      button{
+        background: none;
+        outline: none;
+        border-style: none;
+        color: white;
+        cursor: pointer;
+        font-size: 1.3rem;
+      }
+
     }
   }
 }
@@ -38,8 +53,8 @@
   display: grid;
   padding-left: 20px;
   padding-top: 30px;
-  .row{
 
+  .row{
     display: grid;
     //background-color: darkblue;
     grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
