--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -6,4 +6,15 @@
 
 *{
   font-family: 'Pretendard', serif;
+  text-decoration: none;
+  color: black;
+}
+
+h2{
+  font-size: 18px;
+  font-weight: 700;
+}
+h4{
+  font-size: 15px;
+  font-weight: 400;
 }
