--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -25,7 +25,7 @@
       margin-left: 20px;
       display: flex;
       input{
-        width: 300px;
+        width: 350px;
         height: 30px;
         //border-radius: 20px;
         border: 1px solid #ffffff;
@@ -51,13 +51,13 @@
 .board-container{
   height: 550px;
   display: grid;
-  padding-left: 20px;
-  padding-top: 30px;
+  //padding-left: 20px;
+  padding-top: 50px;
 
   .row{
     display: grid;
-    //background-color: darkblue;
     grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    justify-items: center;
     grid-gap: 20px;
   }
 
