--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -10,11 +10,34 @@
   color: black;
 }
 
-h2{
-  font-size: 18px;
-  font-weight: 700;
+.cardContainer{
+  img{
+    height: 170px;
+    width: 170px;
+  }
+  .card-info{
+    position: relative;
+    img{
+      height: 20px;
+      width: 20px;
+      border-radius: 50%;
+      float: left;
+    }
+    .text-container{
+      h2{
+        font-size: 18px;
+        font-weight: 700;
+        margin-top: -10px;
+      }
+      h4{
+        font-size: 15px;
+        font-weight: 400;
+        padding-left: 25px;
+      }
+    }
+  }
 }
-h4{
-  font-size: 15px;
-  font-weight: 400;
-}
+
+
+
+
