--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
   //background-color: black;
   font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
+
 button{
   background-color: transparent;
   border: none;
@@ -24,7 +25,7 @@ button{
 header{
   background-color: #000000;
   align-items: center;
-  padding: 20px 0 0 30px;
+  padding: 30px 0 0 30px;
   display: flex;
   position: relative;
   .logo{
@@ -41,6 +42,11 @@ header{
     flex: 1;
     float: left;
     right: 30px;
+    color: white;
+    img{
+      width: 35px;
+      height: 35px;
+    }
 
   }
 }
@@ -48,9 +54,13 @@ body{
   color: white;
   background-color: black;
   .main-top-section {
+    background-color: black;
     padding-left: 30px;
-    margin-bottom: 40px;
-    height: 260px;
+    margin-top: -50px;
+    height: 350px;
+    .one{
+      padding-top: 20px;
+    }
     .two{
       margin-top: -70px;
     }
@@ -61,14 +71,16 @@ body{
       font-weight: 500;
       font-size: 56px;
       letter-spacing: -3px;
+      color: white;
       p{
         font-family: 'Poppins', sans-serif;
         font-weight: 200;
         font-style: italic;
+        color: white;
       }
     }
     h3{
-      margin-top: -10px;
+      margin-top: -20px;
       font-size: 18px;
       color: white;
       font-weight: 200;
@@ -108,8 +120,4 @@ body{
   .main-top{
     h1{font-size: 4rem}
   }
-}
-
-@media (min-width: 1024px) {
-
 }
