--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -31,7 +31,6 @@
         border: 1px solid #ffffff;
         background-color: transparent;
         transition: all 250ms ease-in-out;
-        backface-visibility: hidden;
         transform-style: preserve-3d;
         font-size: 18px;
         color: white;
@@ -49,16 +48,9 @@
   }
 }
 .board-container{
-  height: 550px;
-  display: grid;
-  //padding-left: 20px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+
   padding-top: 50px;
-
-  .row{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-    justify-items: center;
-    grid-gap: 20px;
-  }
-
 }
