feat:update search and categories

--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -7,57 +7,90 @@
 
 .header-section {
     margin-top: -30px;
-    .header-text {
-        h2 {
-            margin-left: 20px;
-            padding-top: 40px;
-            font-family: 'Pretendard', serif;
-            font-weight: 500;
-            font-size: 35px;
-            color: white;
-        }
-        height: 130px;
-        background-color: black;
-    }
-    .search-box {
-        background-color: black;
-        .search {
-            padding-bottom: 20px;
-            margin-left: 20px;
-            display: flex;
-            input {
-                width: 350px;
-                height: 30px;
-                //border-radius: 20px;
-                border: 1px solid #ffffff;
-                background-color: transparent;
-                transition: all 250ms ease-in-out;
-                // backface-visibility: hidden;
-                transform-style: preserve-3d;
-                font-size: 18px;
+    // position: relative;
+    .header-wrapper {
+        // transform: translate(0, -50%);
+        .header-text {
+            h2 {
+                margin-left: 20px;
+                padding-top: 40px;
+                font-family: 'Pretendard', serif;
+                font-weight: 500;
+                font-size: 35px;
                 color: white;
             }
-            button {
-                background: none;
-                outline: none;
-                border-style: none;
+            height: 130px;
+            background-color: black;
+        }
+        .category-select {
+            margin-left: 20px;
+            margin-right: 20px;
+            float: left;
+            .selects {
                 color: white;
-                cursor: pointer;
-                font-size: 1.3rem;
+                font-size: 0.9rem;
+                background-color: transparent;
+                appearance: none;
+                width: 80px;
+                height: 34px;
+                border-radius: 5px;
+                border: 1px solid #ffffff;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                text-align: center;
+                transition: all 250ms ease-in-out;
+                backface-visibility: hidden;
+                transform-style: preserve-3d;
+                // background: url('../assets/images/arrow-down.png') no-repeat 95%
+                //     50%;
+            }
+        }
+        .search-box {
+            background-color: black;
+            .search {
+                padding-bottom: 20px;
+                input {
+                    width: 310px;
+                    height: 30px;
+                    border-radius: 5px;
+                    border: 1px solid #ffffff;
+                    background-color: transparent;
+                    transition: all 250ms ease-in-out;
+                    backface-visibility: hidden;
+                    transform-style: preserve-3d;
+                    font-size: 0.9rem;
+                    color: white;
+                }
+                .clearButton {
+                    background: none;
+                    outline: none;
+                    border-style: none;
+                    width: 40px;
+                    height: 40px;
+                    color: #a431b9;
+                    font-size: 0.9rem;
+                    margin-left: 5px;
+                }
+                .search-icon {
+                    background: none;
+                    outline: none;
+                    border-style: none;
+                    cursor: pointer;
+                    width: 40px;
+                    height: 40px;
+                    margin-top: -3px;
+                }
             }
         }
     }
 }
-.board-container {
-    height: 550px;
-    display: grid;
-    //padding-left: 20px;
-    padding-top: 50px;
 
+.board-container {
+    margin-top: 30px;
     .row {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-        justify-items: center;
-        // grid-gap: 20px;
+        grid-template-columns: repeat(2, 200px);
     }
+    // .row {
+    // }
 }
