--- a/src/styles/comment.scss
+++ b/src/styles/comment.scss
@@ -1,4 +1,4 @@
-commentComp{
+.commentComp{
   width:300px;
 
   .commentInput{
@@ -6,6 +6,15 @@ commentComp{
     grid-template-columns: 3fr 1fr;
 
     margin-bottom: 1rem;
+    textarea{
+      border-radius: 3px 0px 0px 3px;
+      border-right: none;
+    }
+    button{
+      border-radius: 0px 3px 3px 0px;
+      background: #cccccc;
+      border: solid 1px #767676;
+    }
   }
   p{
     margin: 0;
