--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -149,7 +149,7 @@ button {
             }
         }
         .board-list {
-            background-color: white;
+            background-color: rgb(255, 255, 255);
             height: 500px;
         }
     }
