--- a/src/components/paging.scss
+++ b/src/components/paging.scss
@@ -1,11 +1,17 @@
 .picture-container {
-    display: flex;
+    // // display: flex;
     width: 320px;
-    justify-content: center;
     align-items: flex-start;
     align-content: flex-start;
-    gap: 20px 16px;
     flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 200px);
+    margin-left: 10%;
+    margin-right: 10%;
+    @media (min-width: 768px) {
+        margin-left: 32%;
+        margin-right: 10%;
+    }
 
     .picture-box {
         display: flex;
@@ -25,7 +31,7 @@
                 height: 152px;
                 flex-shrink: 0;
             }
-        }   
+        }
     }
 }
 .number-container {
@@ -56,8 +62,8 @@
             font-weight: 200;
             line-height: normal;
         }
-        .active{
-            color: #A431B9;
+        .active {
+            color: #a431b9;
         }
     }
 }
