--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -53,10 +53,11 @@
             }
             .search-box {
                 background-color: black;
+                margin-left: -20px;
                 .search {
                     padding-bottom: 20px;
                     input {
-                        width: 50%;
+                        width: 400px;
                         padding: 5px 10px;
                         background-color: transparent;
                         transition: transform 250ms ease-in-out;
@@ -115,57 +116,58 @@
     }
     height: 130px;
     background-color: black;
-  }
-  .search-box{
+}
+.search-box {
     background-color: black;
-    .search{
-      padding-bottom: 20px;
-      margin-left: 20px;
-      display: flex;
-      input{
-        width: 350px;
-        height: 30px;
-        //border-radius: 20px;
-        border: 1px solid #ffffff;
-        background-color: transparent;
-        transition: all 250ms ease-in-out;
-        transform-style: preserve-3d;
-        font-size: 18px;
-        color: white;
-      }
-      button{
-        background: none;
-        outline: none;
-        border-style: none;
-        color: white;
-        cursor: pointer;
-        font-size: 1.3rem;
-      }
+    .search {
+        padding-bottom: 20px;
+        margin-left: 20px;
+        display: flex;
+        input {
+            width: 350px;
+            height: 30px;
+            //border-radius: 20px;
+            border: 1px solid #ffffff;
+            background-color: transparent;
+            transition: all 250ms ease-in-out;
+            transform-style: preserve-3d;
+            font-size: 18px;
+            color: white;
+        }
+        button {
+            background: none;
+            outline: none;
+            border-style: none;
+            color: white;
+            cursor: pointer;
+            font-size: 1.3rem;
+        }
 
-    .board-body {
-        @media (min-width: 768px) {
-            margin-left: 20%;
-            margin-right: 20%;
-        }
-        background-color: white;
-        .category-bar-section {
-            flex: 1;
-            height: 40px;
-        }
-        .board-container {
-            margin-top: 30px;
-            .row {
-                display: grid;
-                grid-template-columns: repeat(2, 200px);
+        .board-body {
+            @media (min-width: 768px) {
+                margin-left: 20%;
+                margin-right: 20%;
+            }
+            background-color: white;
+            .category-bar-section {
+                flex: 1;
+                height: 40px;
+            }
+            .board-container {
+                margin-top: 30px;
+                // align-items: center;
+                // .row {
+                //     display: grid;
+                //     grid-template-columns: repeat(2, 200px);
+                // }
             }
         }
     }
-  }
 }
-.board-container{
-  display:flex;
-  flex-direction: column;
-  align-items: center;
+// .board-container {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
 
-  padding-top: 50px;
-}
+//     padding-top: 50px;
+// }
