[Feat] #33 - myPage button, post post/fetch

--- a/src/styles/myPage.scss
+++ b/src/styles/myPage.scss
@@ -204,6 +204,7 @@
                             gap: 12px;
 
                             .picture-edit-box {
+                                cursor:pointer;
                                 display: flex;
                                 padding: 2px 8px;
                                 justify-content: center;
@@ -224,6 +225,7 @@
                             }
 
                             .picture-del-box {
+                                cursor: pointer;
                                 display: flex;
                                 padding: 2px 8px;
                                 justify-content: center;
